Termina a configuração do projeto de Sass
- Falta só colocar as variavéis relativas a altura e largura dos componentes, porem vou colocar isso dentro do sass do componente
- Preciso instalar o bootstrap tambem e fazer alguns mixins para aparecer ou nao o componente se estiver em mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-
-:root {
-    font-size: 12px;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-}
+@import 'assets/scss/main';
