--- a/src/app/shared/components/calendar/calendar.component.html
+++ b/src/app/shared/components/calendar/calendar.component.html
@@ -1,3 +1,11 @@
-<p>
-  calendar works!
-</p>
+<div class="content">
+	<div class="calendar">
+		<div class="calendar__event">
+			evento
+		</div>
+		<div class="calendar__datepicker">
+			datepicker
+		</div>
+	</div>
+</div>
+
