--- a/src/assets/scss/utils/_mixins.scss
+++ b/src/assets/scss/utils/_mixins.scss
@@ -24,12 +24,12 @@
 }
 
 
-@mixin visible-xs {
+@mixin visible-xs($display-type) {
 	@media #{$mq-xsmall} { display: block; }
-  @media #{$mq-small} { display: none; }
+  @media #{$mq-small} { display: $display-type; }
 }
 
-@mixin hidden-xs {
+@mixin hidden-xs($display-type) {
   @media #{$mq-xsmall} { display: none; }
-  @media #{$mq-small} { display: block; }  
+  @media #{$mq-small} { display: $display-type; }  
 }
