Resolve o problema do border-box - Na verdade o problema é com o box-sizing que precisa ser border-box e nao sei pq nao esta ficando - Estava tendo problema com o grid do bootstrap, mas acho que consegui resolver zerando os paddings e margin do row e col

--- a/src/app/shared/components/calendar/calendar.component.html
+++ b/src/app/shared/components/calendar/calendar.component.html
@@ -1,9 +1,35 @@
 <div class="content">
 	<div class="calendar">
-		<div class="calendar__event">
-			evento
+
+		<!-- Event block -->
+		<div class="event row">
+
+			<!-- Current Day block -->
+			<div class="event__current-day col-xs-4">
+
+				<!-- Day -->
+				<div class="event__current-day--number">
+					20
+				</div>
+				<div class="event__current-day--week">
+					wednesday
+				</div>
+			</div>
+
+			<!-- Event / Create event -->
+			<div class="event__current-events col-xs-8">
+				<div class="event__current-events__list">
+					current events
+					<ul>
+						<li>Theusmá Birthday</li>
+					</ul>
+				</div>
+				<div class="event__current-events__create">
+					Create on Event
+				</div>
+			</div>
 		</div>
-		<div class="calendar__datepicker">
+		<div class="datepicker">
 			datepicker
 		</div>
 	</div>
