Parte de eventos terminado
- Preciso agora lidar com o layout em desktop

--- a/src/app/shared/components/calendar/calendar.component.html
+++ b/src/app/shared/components/calendar/calendar.component.html
@@ -5,7 +5,7 @@
 		<div class="event row">
 
 			<!-- Current Day block -->
-			<div class="event__current-day col-xs-4">
+			<div class="event__current-day col-xs-5 col-sm-12">
 
 				<!-- Day -->
 				<div class="event__current-day--number">
@@ -17,15 +17,19 @@
 			</div>
 
 			<!-- Event / Create event -->
-			<div class="event__current-events col-xs-8">
-				<div class="event__current-events__list">
+			<div class="event__current-events col-xs-7 col-sm-12">
+				<!-- List of current events -->
+				<div class="event-list">
 					current events
 					<ul>
 						<li>Theusmá Birthday</li>
 					</ul>
 				</div>
-				<div class="event__current-events__create">
-					Create on Event
+				<div class="create-event">
+					<span class="create-event__title">Create on Event</span>
+					<div class="create-event__plus-icon">
+						<span>+</span>
+					</div>
 				</div>
 			</div>
 		</div>
