--- a/src/assets/scss/utils/_helpers.scss
+++ b/src/assets/scss/utils/_helpers.scss
@@ -5,3 +5,9 @@
 	justify-content: center;
 	flex-direction: column;
 }
+
+.align-horizontal-center {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
