Modifica layout da barra de eventos
- Transformei em input a criação de evento
- Coloquei o flex para conseguir colocar varios eventos sem zuar o layout da lista

--- a/src/app/shared/components/calendar/calendar.component.html
+++ b/src/app/shared/components/calendar/calendar.component.html
@@ -23,11 +23,13 @@
 					current events
 					<ul>
 						<li>Theusmá Birthday</li>
+						<li>Theusmá Birthday</li>
+						<li>Theusmá Birthday</li>
 					</ul>
 				</div>
 				<div class="create-event">
-					<span class="create-event__title">Create on Event</span>
-					<div class="create-event__plus-icon">
+					<input id="appointment-input" class="create-event__input" placeholder="Create event">
+					<div id="appointment-submit" class="create-event__plus-icon">
 						<span>+</span>
 					</div>
 				</div>
