--- a/src/assets/scss/utils/_helpers.scss
+++ b/src/assets/scss/utils/_helpers.scss
@@ -1,4 +1,6 @@
 
+
+// Alignment
 .align-vertical-center {
 	height: 100%;
 	display: flex;
@@ -10,4 +12,9 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
+}
+
+.align-space-between {
+	display: flex;
+	justify-content: space-between;
 }
