Adiciona offsets ao calendario

--- a/src/app/shared/components/calendar/calendar.component.html
+++ b/src/app/shared/components/calendar/calendar.component.html
@@ -61,7 +61,8 @@
 
 				<!-- Days -->
 				<tr class="month-view__days-of-the-month" *ngFor="let week of month">
-					<td *ngFor="let day of week">
+					<td *ngFor="let day of week" 
+					[ngClass]="{'month-view__days-of-the-month--offset': day.offset}">
 					{{ day.date.getDate() }}
 					</td>
 				</tr>
