Alinha o calendário no centro da tela (horizontal e verticalemtne)

--- a/src/app/shared/components/calendar/calendar.component.scss
+++ b/src/app/shared/components/calendar/calendar.component.scss
@@ -16,9 +16,9 @@ $calendarHeaderHeight: 15%;
 $defaultMatginBottom: 1.5rem;
 
 .content {
-	display: flex;
-	justify-content: center;
-	width: 100%;
+	position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 .calendar {
