--- a/src/app/shared/components/calendar/calendar.component.html
+++ b/src/app/shared/components/calendar/calendar.component.html
@@ -1,84 +1,94 @@
-<div class="content">
-	<div class="calendar">
 
-		<!-- Event block -->
-		<div class="event row">
+<div class="content align-vertical-center">
+	<div class="align-horizontal-center">
+		
+		<div class="calendar">
 
-			<!-- Current Day block -->
-			<div class="event__current-day col-xs-5 col-sm-12">
+			<!-- Event block -->
+			<div class="event row">
 
-				<!-- Day -->
-				<div class="event__current-day--number">
-					{{ selectedDay?.date.getDate() }} 
+				<!-- Current Day block -->
+				<div class="event__current-day col-xs-5 col-sm-12">
+
+					<!-- Day -->
+					<div class="event__current-day--number">
+						{{ selectedDay?.date.getDate() }} 
+					</div>
+					<div class="event__current-day--week">
+						{{ daysOfTheWeekFull[selectedDay?.date.getDay()] }}
+					</div>
 				</div>
-				<div class="event__current-day--week">
-					{{ daysOfTheWeekFull[selectedDay?.date.getDay()] }}
-				</div>
-			</div>
 
-			<!-- Event / Create event -->
-			<div class="event__current-events col-xs-7 col-sm-12">
-				<!-- List of current events -->
-				<div class="event-list">
-					current events
-					<ul>
-						<li>Theusmá Birthday</li>
-						<li>Theusmá Birthday</li>
-						<li>Theusmá Birthday</li>
-					</ul>
-				</div>
-				<div class="create-event">
-					<input id="appointment-input" class="create-event__input" placeholder="Create event">
-					<div id="appointment-submit" class="create-event__plus-icon">
-						<span>+</span>
+				<!-- Event / Create event -->
+				<div class="event__current-events col-xs-7 col-sm-12">
+					<!-- List of current events -->
+					<div class="event-list">
+						current events
+						<ul>
+							<li>Theusmá Birthday</li>
+							<li>Theusmá Birthday</li>
+							<li>Theusmá Birthday</li>
+						</ul>
+					</div>
+					<div class="create-event">
+						<input id="appointment-input" class="create-event__input" placeholder="Create event">
+						<div id="appointment-submit" class="create-event__plus-icon">
+							<span>+</span>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<!-- Datepicker -->
-		<div class="datepicker">
+			<!-- Datepicker -->
+			<div class="datepicker">
 
-			<!-- Actual month -->
-			<div class="datepicker__actual-month">
-				<div class="datepicker__actual-month--vertical-center">
-					<span (click)="getPreviousMonth()"><</span> <!-- Previous -->
-					<span class="datepicker__actual-month--text">
-						{{ allMonths[selectedDay?.date.getMonth()] }} 
-						/ 
-						{{ selectedDay?.date.getFullYear().toString().substring(2,4) }}</span>
-					<span (click)="getFollowingMonth()">></span> <!-- Next -->
+				<!-- Actual month -->
+				<div class="datepicker__actual-month">
+					<div class="datepicker__actual-month--vertical-center">
+						<span (click)="getPreviousMonth()"><</span> <!-- Previous -->
+						<span class="datepicker__actual-month--text">
+							{{ allMonths[selectedDay?.date.getMonth()] }} 
+							/ 
+							{{ selectedDay?.date.getFullYear().toString().substring(2,4) }}</span>
+						<span (click)="getFollowingMonth()">></span> <!-- Next -->
+					</div>
 				</div>
+
+				<!-- Divider -->
+				<hr class="datepicker__divider">
+
+				<table class="month-view">
+					<!-- Days of the week -->
+					<tr class="month-view__days-of-the-week">
+						<th *ngFor="let day of daysOfTheWeek">
+							{{ day }}
+						</th>
+					</tr>
+
+					<!-- Days -->
+					<tr class="month-view__days-of-the-month" *ngFor="let week of month">
+						<td class="calendar__day" *ngFor="let day of week" 
+						(click)="changeSelectedDay(day)"
+						[ngClass]="{'month-view__days-of-the-month--offset': day.offset}">
+							<!-- Normal text -->
+							<div *ngIf="!isSelectedDay(day)">
+								{{ day.date.getDate() }}
+							</div>
+							<!-- Selected purple ball -->
+							<div class="bla" *ngIf="isSelectedDay(day)">
+								<span class="align-vertical-center">{{ day.date.getDate() }}</span>
+								<!-- {{ day.date.getDate() }} -->
+							</div>
+						</td>
+					</tr>
+				</table>
+
 			</div>
 
-			<!-- Divider -->
-			<hr class="datepicker__divider">
 
-			<table class="month-view">
-				<!-- Days of the week -->
-				<tr class="month-view__days-of-the-week">
-					<th *ngFor="let day of daysOfTheWeek">
-						{{ day }}
-					</th>
-				</tr>
+		</div>  <!-- End Calendar block -->
 
-				<!-- Days -->
-				<tr class="month-view__days-of-the-month" *ngFor="let week of month">
-					<td class="calendar__day" *ngFor="let day of week" 
-					(click)="changeSelectedDay(day)"
-					[ngClass]="{'month-view__days-of-the-month--offset': day.offset}">
-						<!-- Normal text -->
-						<div *ngIf="!isSelectedDay(day)">
-							{{ day.date.getDate() }}
-						</div>
-						<!-- Selected purple ball -->
-						<div class="bla" *ngIf="isSelectedDay(day)">
-							<span class="align-vertical-center">{{ day.date.getDate() }}</span>
-							<!-- {{ day.date.getDate() }} -->
-						</div>
-					</td>
-				</tr>
-			</table>
-	</div>
-</div>
+
+	</div> <!-- End horizontal align block -->
+</div> <!-- End content block -->
 
